[Remoting Android] Create URLRequestContextGetter on UI thread

This CL fixes a bug that crashes the latest M70 Android client when it
lauches.

URLRequestContextGetter's constructor creates a ProxyChangeListener,
which requires an Android looper on the current thread. The C++ network
thread doesn't create any looper, so it must be created on the UI thread
which has alooper. Note that this class is used (and required to be used)
on the network thread afterwards.

Bug: 882072
Change-Id: I0cf610d3dccf087f040b49995d3022a1ba4de0e9
Reviewed-on: https://chromium-review.googlesource.com/1217363
Reviewed-by: Joe Downing <joedow@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590057}
Former-commit-id: a1f0a5bbe3467622fa75162c6e389b201a58cbd3